--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-{
-    
+body {
+    font-family:"Handlee";
+    background-color: bisque;
+    padding: 10px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 15pt;
+    color:black
     
 }
